# NanoLoong-Bipedal

./: README.md
OmniBotCtrl/OmniBotCtrl/: MUJOCO_LOG.TXT  global_config.py  model_jitt.pt  modelt.pt  play.py  sim2sim_tinker.py  train.py
OmniBotHmi/OmniBotHmi/: ocu_param.txt
OmniBotHub/Linux/: download_param_tinker.sh  download_tinker.sh
OmniBotHub/Linux/control_task2/: CMakeLists.txt
OmniBotHub/Linux/control_task2/Param_Taitan14_Zero/: param_gait.yaml  param_robot.yaml
OmniBotHub/Linux/control_task2/Param_Tinker12/: param_gait.yaml  param_robot.yaml
OmniBotHub/Linux/control_task2/Param_Tinker14/: param_gait.yaml  param_robot.yaml
OmniBotHub/Linux/control_task2/Param_Tinker14_Zero/: param_gait.yaml  param_robot.yaml
OmniBotHub/Linux/control_task2/gait_src/: rl.cpp  self_right.cpp  stand.cpp
OmniBotHub/Linux/control_task2/inc/: can.h  spi_node.h
OmniBotHub/Linux/control_task2/loong_ctrl/: .gitignore  readme.md
OmniBotHub/Linux/control_task2/loong_ctrl/config/: 000.ini
OmniBotHub/Linux/control_task2/loong_ctrl/model/: model_jitt-good.pt  model_jitt.pt  modelt.pt  tinker.urdf
OmniBotHub/Linux/control_task2/loong_ctrl/src/manager/: nabo_config.h
OmniBotHub/Linux/control_task2/loong_ctrl/src/rl/: thread_loop.h  thread_loop.hxx  tvm.cpp  tvm.h  tvm2.cpp  tvm2.h
OmniBotHub/Linux/control_task2/loong_utility/: algorithms.cpp  algorithms.h  eigen.h  ini.cpp  ini.h  iopack.h  iopack.hxx  timing.cpp  timing.h
OmniBotHub/Linux/control_task2/math_inc/: eso.h  eso_RL.h
OmniBotHub/Linux/control_task2/math_src/: RT_math.cpp  common_math.cpp  eso.cpp  eso_RL.cpp  fliter_math.cpp  imp_math.cpp  kin_math.cpp
OmniBotHub/Linux/control_task2/model/: model_jitt.pt  modelt.pt
OmniBotHub/Linux/control_task2/src/: can.cpp  main.cpp  memory_share.cpp  robot_param.cpp
OmniBotHub/Linux/control_task2/vmc_inc/: base_struct.h  gait_math.h  include.h  locomotion_header.h
OmniBotHub/Linux/control_task2/vmc_src/: force_imp_controller.cpp  hardware_interface.cpp  locomotion_sfm.cpp  sdk_api.cpp
OmniBotHub/PCB/: omnibotdebug.PcbDoc  omnibothub-core.PcbDoc  omnibothub-core.xls  omnibothub-debug.PcbDoc  omnibothub-debug.SchDoc  omnibothub-extcan.PcbDoc  omnibothub-extcan.xls  omnibothub-power-four.PcbDoc  omnibothub-power-one-usb.PcbDoc  omnibothub-power-one-usb.SchDoc  omnibothub-power-one.PcbDoc  omnibothub-power-one.SchDoc  omnibothub-power-two.PcbDoc  omnibothub-power-two.SchDoc
OmniBotHub/Stm32/: F407_FC.hex
OmniBotSeries/机加工/: 机加工.rar
OmniBotTele/ESP32/: CMakeLists.txt  ESP32Box.sll  ESP32Box.spj  ESP32Box_events.py  README.md  partitions-16MiB.csv  sdkconfig  sdkconfig.old
OmniBotTele/ESP32/components/BSP/: CMakeLists.txt
OmniBotTele/ESP32/components/BSP/IIC/: iic.c  iic.h
OmniBotTele/ESP32/components/BSP/KEY/: key.c  key.h
OmniBotTele/ESP32/components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h
OmniBotTele/ESP32/components/BSP/LED/: led.c  led.h
OmniBotTele/ESP32/components/BSP/SDIO/: spi_sdcard.c  spi_sdcard.h
OmniBotTele/ESP32/components/BSP/SPI/: spi.c  spi.h
OmniBotTele/ESP32/components/BSP/TOUCH/: chsc5xxx.c  chsc5xxx.h  touch.c  touch.h
OmniBotTele/ESP32/components/BSP/USART/: usart.c  usart.h
OmniBotTele/ESP32/components/BSP/XL9555/: xl9555.c  xl9555.h
OmniBotTele/ESP32/main/: CMakeLists.txt  main.c
OmniBotTele/ESP32/main/APP/: Font24.c  convert.c  convert.h  fonts.c  fonts.h  lv_mainstart.c  lv_mainstart.h  lvgl_demo.c  lvgl_demo.h  lwip_demo.c  lwip_demo.h  robot.h  text.c  text.h  wifi_config.c  wifi_config.h
OmniBotTele/ESP32/main/UI Test/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
OmniBotTele/ESP32/main/UI Test/components/: ui_comp_hook.c
OmniBotTele/ESP32/main/UI Test/images/: ui_img_1700300519.c  ui_img_1822533526.c  ui_img_1932484971.c  ui_img_705703283.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_main_off_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c
OmniBotTele/ESP32/main/UI Test/screens/: ui_ScreenACT.c  ui_ScreenArm.c  ui_ScreenGPT.c  ui_ScreenLeg.c  ui_ScreenMission.c  ui_ScreenRC.c  ui_ScreenSensor.c  ui_ScreenSystem.c  ui_ScreenWifi.c  ui_Screenlogin.c  ui_ScreenloginFail.c  ui_ScreenloginGood.c  ui_Start.c
OmniBotTele/PCB/: OmniBotRemote.PcbDoc  OmniBotRemote.PcbDoc.htm  OmniBotRemote.PcbDocPreview  OmniBotRemote.SchDoc  OmniBotRemote.SchDocPreview  OmniBotRemote.xls  usb_convert.PcbDoc  usb_convert.xls
OmniBotTele/STM32/: ocu.h
OmniBotTele/外壳/: 上盖 - 矮.SLDPRT  上盖 - 矮.STEP  上盖.SLDPRT  上盖.STEP  底座.SLDPRT  底座.STEP  开关.SLDPRT  开关.STEP  按键帽.SLDPRT  按键帽.STEP  支撑.SLDPRT  (+3 more)
(+170 files in other folders)
