idf_component_register(
    SRC_DIRS 
        "." 
        "APP" 
        "UI Test"
        "UI Test/screens"
        "UI Test/fonts"
        "UI Test/components"
        "UI Test/Images"
    INCLUDE_DIRS 
        "."
        "APP" 
        "UI Test"
        "UI Test/screens"
        "UI Test/fonts"
        "UI Test/components"
        "UI Test/Images" )

